--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,22 @@
-
-*{
-    font-family: 'Coming Soon', cursive; !important;
+body {
+    padding: 2rem;
+    text-align: center;
 }
 
+
+.contentContainer {
+    background-color: #3E658D;
+    width: 100%;
+    max-width: 580px;
+    padding: 6rem 6rem;
+    display: inline-block;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+
+}
 html, body {
     height: 100%;
 }
