--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 
 .contentContainer {
-    background-color: #3E658D;
+
     width: 100%;
     max-width: 580px;
     padding: 6rem 6rem;
@@ -14,6 +14,13 @@
     transform: translateY(-50%);
 
 }
+
+.flowerBackground{
+
+    background: #D7EFFB  url("../prinsesse/img/Bakgrunn.jpg") repeat-x fixed bottom !important;
+
+}
+
 html, body {
     height: 100%;
 }
